improve UI and maintain static folders for image

--- a/src/templates/breastcancer.html
+++ b/src/templates/breastcancer.html
@@ -66,8 +66,8 @@
 
                     <label class="col-md-4 control-label"></label>
                     <div class="col-md-4 inputGroupContainer">
-                      <p style="color:rgb(65, 26, 8)">BREAST CANCER DIAGNOSIS</p>
-                      <p style="color:rgb(4, 61, 54)">Please, Fill up the form to get the prediction</p>
+                      <b><p style="color:rgb(65, 26, 8); font-size: 22px; margin-bottom: 23px;">BREAST CANCER DIAGNOSIS</p></b>
+                     
                       <div class="input-group">
                         <span class="input-group-addon"></span>
                         <input name="Diagnosis" placeholder="Diagnosis" class="form-control" type="text">
@@ -337,9 +337,9 @@
           <div class="section-title">
             <h2 class="head-title lg-line">Breast<br>Cancer</h2>
             <hr class="botm-line">
-            <p class="sec-para">Please, read these instructions before using our machine learning
-              models. If you want to try it for learning purposes ,you can proceed to our
-              prediction section.</p>
+            <p class="sec-para">Breast cancer can occur in women and rarely in men.
+              Symptoms of breast cancer include a lump in the breast, bloody discharge from the nipple and changes in the shape or texture of the nipple or breast.
+              Its treatment depends on the stage of cancer. It may consist of chemotherapy, radiation, hormone therapy and surgery.</p>
 
           </div>
         </div>
