--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -333,7 +333,7 @@
             </div>
             <div class="info-sec">
               <ul class="quick-info">
-                <li><a href="index.html"><i class="fa fa-circle"></i>Home</a></li>
+                <li><a href="{{url_for('index')}}"><i class="fa fa-circle"></i>Home</a></li>
                 <li><a href="#contact"><i class="fa fa-circle"></i>About</a></li>
                 <li><a href="#prediction"><i class="fa fa-circle"></i>Prediction</a></li>
               </ul>
