--- a/src/templates/thyroid.html
+++ b/src/templates/thyroid.html
@@ -19,7 +19,7 @@
 
 <body>
   <section id="top-section" class="top-section">
-    <div class="bg-color">
+    <div class="bg-colo">
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
           <div class="col-md-12">
@@ -56,16 +56,9 @@
               <form class="well form-horizontal" action=" " method="post" id="contact_form">
                 <fieldset>
 
-                  <!-- Form Name -->
-                  <!-- <legend>Enter values!</legend> -->
-
-
-                  <!-- Text input-->
-
                   <div class="form-group">
-                    <p style="color:rgb(65, 26, 8)">THYROID DISEASE PREDICTION</p>
-                    <p style="color:rgb(4, 61, 54)">Please, Fill up the form to get the prediction</p>
-
+                    <b><p style="color:rgb(65, 26, 8); font-size: 22px; margin-bottom: 23px;">THYROID DISEASE PREDICTION</p></b>
+                    
                     <label class="col-md-4 control-label"> </label>
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
@@ -341,14 +334,10 @@
                 </fieldset>
               </form>
             </div>
-          </div><!-- /.container -->
+          </div>
         </div>
       </div>
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
+    
   </section>
 
   <!--about-->
@@ -359,9 +348,10 @@
           <div class="section-title">
             <h2 class="head-title lg-line">THYROID<br>DISEASE</h2>
             <hr class="botm-line">
-            <p class="sec-para">Please, read these instructions before using our machine learning
-              models. If you want to try it for learning purposes ,you can proceed to our
-              prediction section.</p>
+            <p class="sec-para">The two main types of thyroid disease are hypothyroidism and hyperthyroidism. Both
+              conditions can be caused by other diseases that impact the way the thyroid gland
+              works. Conditions that can cause hypothyroidism include: Thyroiditis: This condition
+              is an inflammation (swelling) of the thyroid gland.</p>
 
           </div>
         </div>
