--- a/src/templates/diabetes.html
+++ b/src/templates/diabetes.html
@@ -29,8 +29,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="{{url_for('index')}}"><img src="{{url_for('static', filename='img/logo.png')}}"
-                  class="img-responsive" style="width:400px;height: 50px; margin-top: -18px;"></a>
+              <a class="navbar-brand" href="{{url_for('index')}}"><img
+                  src="{{url_for('static', filename='img/logo.png')}}" class="img-responsive"
+                  style="width:400px;height: 50px; margin-top: -18px;"></a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
               <ul class="nav navbar-nav">
@@ -60,8 +61,8 @@
                   <!-- <legend>Enter values!</legend> -->
 
                   <!-- Text input-->
-                  <p style="color:rgb(65, 26, 8)">DIABETES DIAGNOSIS</p>
-                  <p style="color:rgb(4, 61, 54)">Please, Fill up the form to get the prediction</p>
+                  <b><p style="color:rgb(65, 26, 8);  font-size: 22px; margin-bottom: 23px;">DIABETES DIAGNOSIS</p></b>
+                 
 
                   <div class="form-group">
                     <label class="col-md-4 control-label"></label>
@@ -199,10 +200,10 @@
           <div class="section-title">
             <h2 class="head-title lg-line">Diabetes</h2>
             <hr class="botm-line">
-            <p class="sec-para">Please, read these instructions before using our machine learning
-              models. If you want to try it for learning purposes ,you can proceed to our
-              prediction section.</p>
-
+            <p class="sec-para">Diabetes is a disease that occurs when your blood glucose, also called blood sugar, is
+              too high. Blood glucose is your main source of energy and comes from the food you eat. Insulin, a hormone
+              made by the pancreas, helps glucose from food get into your cells to be used for energy.
+            </p>
           </div>
         </div>
         <div class="col-md-9 col-sm-8 col-xs-12">
