--- a/src/templates/heart.html
+++ b/src/templates/heart.html
@@ -29,8 +29,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="{{url_for('index')}}"><img src="{{url_for('static', filename='img/logo.png')}}"
-                  class="img-responsive" style="width:400px;height: 50px; margin-top: -18px;"></a>
+              <a class="navbar-brand" href="{{url_for('index')}}"><img
+                  src="{{url_for('static', filename='img/logo.png')}}" class="img-responsive"
+                  style="width:400px;height: 50px; margin-top: -18px;"></a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
               <ul class="nav navbar-nav">
@@ -58,9 +59,11 @@
           <div class="section-title">
             <h2 class="head-title lg-line">Heart<br>Disease</h2>
             <hr class="botm-line">
-            <p class="sec-para">Please, read these instructions before using our machine learning
-              models. If you want to try it for learning purposes ,you can proceed to our
-              prediction section.</p>
+            <p class="sec-para">Together CVD resulted in
+              17.9 million deaths (32.1%) in 2015, up from 12.3 million (25.8%) in 1990.
+              The term “heart disease” refers to several types of heart conditions. In the United
+              States, the most common type of heart disease is coronary artery disease (CAD),
+              which can lead to heart attack.</p>
 
           </div>
         </div>
