--- a/src/templates/pneumonia.html
+++ b/src/templates/pneumonia.html
@@ -48,10 +48,6 @@
       </nav>
 
     </div>
-    </div>
-    </div>
-    </div>
-    </div>
 
 
   </section>
@@ -64,9 +60,10 @@
           <div class="section-title">
             <h2 class="head-title lg-line">Pneumonia <br>Detection</h2>
             <hr class="botm-line">
-            <p class="sec-para">Please, read these instructions before using our machine learning
-              models. If you want to try it for learning purposes ,you can proceed to our
-              prediction section.</p>
+            <p class="sec-para">Pneumonia is an infection that inflames the air sacs in one or both lungs. The air
+              sacs may fill with fluid or pus (purulent material), causing cough with phlegm or
+              pus, fever, chills, and difficulty breathing. A variety of organisms, including
+              bacteria, viruses and fungi, can cause pneumonia.</p>
 
           </div>
         </div>
