changes in homepage

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -126,7 +126,7 @@
               <h4>Breast cancer</h4>
               <p>Breast cancer most commonly presents as a lump that feels different from the rest of the breast tissue.
                 More than 80% of cases are discovered when a person detects such a lump with the fingertips.
-                Verify whether you have Malignant or Benign. Our Machine Learning model will try it’s best to give the
+                Verify whether you have Malignant or Benign. Our Machine Learning model will try it's best to give the
                 correct result.
               </p>
             </div>
@@ -180,7 +180,7 @@
             <div class="more-features-box-text">
               <div class="more-features-box-text-icon"> <i class="fa fa-angle-right" aria-hidden="true"></i> </div>
               <div class="more-features-box-text-description">
-                <h3>Have proper supervision before techng</h3>
+                <h3>Have proper supervision before testing</h3>
                 <p>Sometimes, our algorithm gives weird outcomes. So, it is better to be used by health professionals
                   who want to save time and have some experience in the related area.</p>
 
