--- a/src/templates/diabetes.html
+++ b/src/templates/diabetes.html
@@ -54,7 +54,7 @@
             <div class="top-section-text text-center" style="margin-top:-70px" ;>
 
 
-              <form class="well form-horizontal" action=" " method="post" id="contact_form" padding="500%" margin="50%">
+              <form class="well form-horizontal" action="/diabetes" method="POST" id="contact_form" padding="500%" margin="50%">
                 <fieldset>
 
                   <!-- Form Name -->
@@ -81,7 +81,7 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="Gluscose" placeholder="Glucose" class="form-control" type="text">
+                        <input name="Glucose" placeholder="Glucose" class="form-control" type="text">
                       </div>
                     </div>
                   </div>
@@ -117,7 +117,7 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="Isulin" placeholder="Insulin" class="form-control" type="text">
+                        <input name="Insulin" placeholder="Insulin" class="form-control" type="text">
                       </div>
                     </div>
                   </div>
@@ -161,21 +161,17 @@
                       </div>
                     </div>
                   </div>
-
-
-
-
-
-
-
-
-
                   <!-- Button -->
                   <div class="form-group">
                     <label class="col-md-4 control-label"></label>
                     <div class="col-md-4">
                       <button type="submit" class="btn btn-warning">Predict<span
                           class="glyphicon glyphicon-send"></span></button>
+                    </div>
+
+                    <div class="res">
+
+                      <h3 style="color: rgb(12, 10, 39);">{{prediction}}</h3>
                     </div>
                   </div>
 
