--- a/src/templates/breastcancer.html
+++ b/src/templates/breastcancer.html
@@ -29,8 +29,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="{{url_for('index')}}"><img src="{{url_for('static', filename='img/logo.png')}}"
-                  class="img-responsive" style="width:400px;height: 50px; margin-top: -18px;"></a>
+              <a class="navbar-brand" href="{{url_for('index')}}"><img
+                  src="{{url_for('static', filename='img/logo.png')}}" class="img-responsive"
+                  style="width:400px;height: 50px; margin-top: -18px;"></a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
               <ul class="nav navbar-nav">
@@ -53,7 +54,7 @@
             <div class="top-section-text text-center" style="margin-top:-70px" ;>
 
 
-              <form class="well form-horizontal" action=" " method="post" id="contact_form">
+              <form class="well form-horizontal" action="/breastcancer" method="POST" id="contact_form">
                 <fieldset>
 
                   <!-- Form Name -->
@@ -66,9 +67,12 @@
 
                     <label class="col-md-4 control-label"></label>
                     <div class="col-md-4 inputGroupContainer">
-                      <b><p style="color:rgb(65, 26, 8); font-size: 22px; margin-bottom: 23px;">BREAST CANCER DIAGNOSIS</p></b>
-                     
-                      
+                      <b>
+                        <p style="color:rgb(65, 26, 8); font-size: 22px; margin-bottom: 23px;">BREAST CANCER DIAGNOSIS
+                        </p>
+                      </b>
+
+
                     </div>
                   </div>
 
@@ -78,7 +82,7 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="Radius_Mean" placeholder="Radius Mean" class="form-control" type="text">
+                        <input name="radius_mean" placeholder="Radius Mean" class="form-control" type="text">
                       </div>
                     </div>
                   </div>
@@ -90,7 +94,7 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="Area_Mean" placeholder="Area Mean" class="form-control" type="text">
+                        <input name="area_mean" placeholder="Area Mean" class="form-control" type="text">
                       </div>
                     </div>
                   </div>
@@ -101,7 +105,7 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="Compactness_Mean" placeholder="Compactness Mean" class="form-control" type="text">
+                        <input name="compactness_mean" placeholder="Compactness Mean" class="form-control" type="text">
                       </div>
                     </div>
                   </div>
@@ -113,7 +117,7 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="Concavity_Mean" placeholder="Concavity Mean" class="form-control" type="text">
+                        <input name="concavity_mean" placeholder="Concavity Mean" class="form-control" type="text">
 
                       </div>
                     </div>
@@ -125,33 +129,20 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="Concave Points_Mean" placeholder="Concave Points Mean" class="form-control"
+                        <input name="concave_points_mean" placeholder="Concave Points Mean" class="form-control"
                           type="text">
 
                       </div>
                     </div>
                   </div>
-                  <!-- Text input-->
+
 
                   <div class="form-group">
                     <label class="col-md-4 control-label"></label>
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="Perimeter_Worst" placeholder="Perimeter Worst" class="form-control" type="text">
-                      </div>
-                    </div>
-                  </div>
-
-
-                  <!-- Text input-->
-
-                  <div class="form-group">
-                    <label class="col-md-4 control-label"></label>
-                    <div class="col-md-4 inputGroupContainer">
-                      <div class="input-group">
-                        <span class="input-group-addon"></span>
-                        <input name="Area_Worst" placeholder="Area Worst" class="form-control" type="text">
+                        <input name="area_worst" placeholder="Area Worst" class="form-control" type="text">
                       </div>
                     </div>
                   </div>
@@ -161,7 +152,7 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="Compactness_Worst" placeholder="Compactness Worst" class="form-control"
+                        <input name="compactness_worst" placeholder="Compactness Worst" class="form-control"
                           type="text">
                       </div>
                     </div>
@@ -176,7 +167,7 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="Concavity_Worst" placeholder="Concavity Worst" class="form-control" type="text">
+                        <input name="concavity_worst" placeholder="Concavity Worst" class="form-control" type="text">
 
                       </div>
                     </div>
@@ -188,36 +179,25 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="Concave Points_Worst" placeholder="Concave Points Worst" class="form-control"
+                        <input name="area_se" placeholder="Area Se" class="form-control" type="text">
+
+                      </div>
+                    </div>
+                  </div>
+
+
+                  <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4 inputGroupContainer">
+                      <div class="input-group">
+                        <span class="input-group-addon"></span>
+                        <input name="fractal_dimension_se" placeholder="Fractal Dimension Se" class="form-control"
                           type="text">
 
                       </div>
                     </div>
                   </div>
 
-                  <div class="form-group">
-                    <label class="col-md-4 control-label"></label>
-                    <div class="col-md-4 inputGroupContainer">
-                      <div class="input-group">
-                        <span class="input-group-addon"></span>
-                        <input name="Texture_Mean" placeholder="Texture Mean" class="form-control" type="text">
-
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <label class="col-md-4 control-label"></label>
-                    <div class="col-md-4 inputGroupContainer">
-                      <div class="input-group">
-                        <span class="input-group-addon"></span>
-                        <input name="Smoothness_Mean" placeholder="Smoothness Mean" class="form-control" type="text">
-
-                      </div>
-                    </div>
-                  </div>
-
-
 
 
 
@@ -226,66 +206,7 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="Symmetry_Mean" placeholder="Symmetry Mean" class="form-control" type="text">
-
-                      </div>
-                    </div>
-                  </div>
-
-
-                  <div class="form-group">
-                    <label class="col-md-4 control-label"></label>
-                    <div class="col-md-4 inputGroupContainer">
-                      <div class="input-group">
-                        <span class="input-group-addon"></span>
-                        <input name="Area_Se" placeholder="Area Se" class="form-control" type="text">
-
-                      </div>
-                    </div>
-                  </div>
-
-
-                  <div class="form-group">
-                    <label class="col-md-4 control-label"></label>
-                    <div class="col-md-4 inputGroupContainer">
-                      <div class="input-group">
-                        <span class="input-group-addon"></span>
-                        <input name="Fractal_Dimension Se" placeholder="Fractal Dimension Se" class="form-control"
-                          type="text">
-
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <label class="col-md-4 control-label"></label>
-                    <div class="col-md-4 inputGroupContainer">
-                      <div class="input-group">
-                        <span class="input-group-addon"></span>
-                        <input name="Texture_Worst" placeholder="Texture Worst" class="form-control" type="text">
-
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <label class="col-md-4 control-label"></label>
-                    <div class="col-md-4 inputGroupContainer">
-                      <div class="input-group">
-                        <span class="input-group-addon"></span>
-                        <input name="Smoothness_Worst" placeholder="Smoothness Worst" class="form-control" type="text">
-
-                      </div>
-                    </div>
-                  </div>
-
-
-                  <div class="form-group">
-                    <label class="col-md-4 control-label"></label>
-                    <div class="col-md-4 inputGroupContainer">
-                      <div class="input-group">
-                        <span class="input-group-addon"></span>
-                        <input name="Symmetry_Worst" placeholder="Symmetry Worst" class="form-control" type="text">
+                        <input name="symmetry_worst" placeholder="Symmetry Worst" class="form-control" type="text">
 
                       </div>
                     </div>
@@ -298,7 +219,7 @@
                     <div class="col-md-4 inputGroupContainer">
                       <div class="input-group">
                         <span class="input-group-addon"></span>
-                        <input name="Fractal_Dimension_Worst" placeholder="Fractal Dimension Worst" class="form-control"
+                        <input name="fractal_dimension_worst" placeholder="Fractal Dimension Worst" class="form-control"
                           type="text">
 
                       </div>
@@ -313,6 +234,12 @@
                       <button type="submit" class="btn btn-warning">Predict <span
                           class="glyphicon glyphicon-send"></span></button>
                     </div>
+                  </div>
+
+
+                  <div class="res">
+
+                    <h3 style="color: rgb(12, 10, 39);">{{prediction}}</h3>
                   </div>
 
                 </fieldset>
@@ -335,8 +262,10 @@
             <h2 class="head-title lg-line">Breast<br>Cancer</h2>
             <hr class="botm-line">
             <p class="sec-para">Breast cancer can occur in women and rarely in men.
-              Symptoms of breast cancer include a lump in the breast, bloody discharge from the nipple and changes in the shape or texture of the nipple or breast.
-              Its treatment depends on the stage of cancer. It may consist of chemotherapy, radiation, hormone therapy and surgery.</p>
+              Symptoms of breast cancer include a lump in the breast, bloody discharge from the nipple and changes in
+              the shape or texture of the nipple or breast.
+              Its treatment depends on the stage of cancer. It may consist of chemotherapy, radiation, hormone therapy
+              and surgery.</p>
 
           </div>
         </div>
