--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -95,11 +95,10 @@
               <i class="fa fa-heart"></i>
             </div>
             <div class="icon-info">
-              <h4>Heart Disease</h4>
+              <a href="{{url_for('heart')}}"><h4>Heart Disease</h4></a>
               <p>Cardiovascular disease (CVD) is a class of diseases that involve the heart or blood vessels.
                 Cardiovascular diseases are the leading cause of death worldwide except Africa. Together CVD resulted in
-                17.9 million deaths (32.1%) in 2015, up from 12.3 million (25.8%) in 1990. You can use our predictive
-                model to predict whether you have CVD or not.
+                17.9 million deaths (32.1%) in 2015, up from 12.3 million (25.8%) in 1990.
               </p>
             </div>
           </div>
@@ -108,12 +107,19 @@
               <i class="fa fa-ambulance"></i>
             </div>
             <div class="icon-info">
-              <h4>Kidney Disease</h4>
+              <!-- <h4>Kidney Disease</h4>
               <p>Kidney disease, or renal disease, technically referred to as nephropathy, is damage to or disease of a
                 kidney, Nephritis an inflammatory kidney disease and has several types according to the location of the
                 inflammation. Inflammation can be diagnosed by blood test. Nephrosis is a non-inflammatory kidney
                 disease. Make sure you try our predictive model in order to see your result.
+              </p> -->
+              <a href="{{url_for('diabetes')}}"><h4>Diabetes</h4></a>
+              <p>Diabetes is a disease that occurs when your blood glucose, also called blood sugar, is
+                too high. Blood glucose is your main source of energy and comes from the food you eat. Insulin, a hormone
+                made by the pancreas, helps glucose from food get into your cells to be used for energy. Irrespective of age group, diabetes can 
+                attack anyone. So, proper medical treatment is to be taken.
               </p>
+              
             </div>
           </div>
         </div>
@@ -123,7 +129,7 @@
               <i class="fa fa-user-md"></i>
             </div>
             <div class="icon-info">
-              <h4>Breast cancer</h4>
+             <a href="{{url_for('breastcancer')}}"><h4>Breast Cancer </h4></a>
               <p>Breast cancer most commonly presents as a lump that feels different from the rest of the breast tissue.
                 More than 80% of cases are discovered when a person detects such a lump with the fingertips.
                 Verify whether you have Malignant or Benign. Our Machine Learning model will try it's best to give the
@@ -136,17 +142,14 @@
               <i class="fa fa-medkit"></i>
             </div>
             <div class="icon-info">
-              <h4>Brain tumor</h4>
+              <a href="#"><h4>Brain Tumor</h4></a>
 
               <p> A brain tumor occurs when abnormal cells form within the brain There are two main types of tumors:
                 malignant tumors and benign (non-cancerous) tumors. These can be further classified as primary tumors
                 which start within the brain, and secondary tumors, which most commonly have spread from tumors located
                 outside the brain, known as brain metastasis tumors.
               </p>
-              <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
-
             </div>
-
           </div>
         </div>
       </div>
