--- a/src/templates/heart.html
+++ b/src/templates/heart.html
@@ -36,18 +36,183 @@
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="{{url_for('index')}}">Home</a></li>
-
-                <li class=""><a href="#about">About</a></li>
-                <li class=""><a href="#prediction-section">Prediction</a></li>
-
+                <li class=""><a href="{{url_for('disease')}}">Disease</a></li>
+                <li class=""><a href="{{url_for('breastcancer')}}">Breast</a></li>
+                <li class=""><a href="{{url_for('diabetes')}}">Diabetes</a></li>
+                <li class=""><a href="#">Malaria</a></li>
               </ul>
             </div>
-
           </div>
-
         </div>
       </nav>
+      <div class="container">
+        <div class="row">
+          <div class="top-section-info">
+            <div class="top-section-text text-center" style="margin-top:-70px" ;>
+              <form class="well form-horizontal" action="/breastcancer" method="POST" id="contact_form">
+                <fieldset>
+                  <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4 inputGroupContainer">
+                      <b>
+                        <p style="color:rgb(126, 5, 31); font-size: 22px; margin-bottom: 23px;">Heart Failure Diagnostic
+                        </p>
+                      </b>
+                    </div>
+                  </div>
 
+                  <!-- Text input-->
+                  <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4 inputGroupContainer">
+                      <div class="input-group">
+                        <span class="input-group-addon"></span>
+                        <input name="age" placeholder="age" class="form-control" type="text">
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4 inputGroupContainer">
+                      <div class="input-group">
+                        <span class="input-group-addon"></span>
+                        <select name="sex" class="form-control">
+                          <option value="male">Female</option>
+                          <option value="female">Male</option>
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4 inputGroupContainer">
+                      <div class="input-group">
+                        <span class="input-group-addon"></span>
+                        <select name="chestpain" class="form-control">
+                          <option value="ATA">ATA</option>
+                          <option value="NAP">NAP</option>
+                          <option value="ASY">ASY</option>
+                          <option value="TA">TA</option>
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4 inputGroupContainer">
+                      <div class="input-group">
+                        <span class="input-group-addon"></span>
+                        <input name="restingbp" placeholder="Resting BP" class="form-control" type="text">
+
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4 inputGroupContainer">
+                      <div class="input-group">
+                        <span class="input-group-addon"></span>
+                        <input name="cholestrol" placeholder="Cholestrol" class="form-control" type="text">
+                      </div>
+                    </div>
+                  </div>
+
+
+                  <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4 inputGroupContainer">
+                      <div class="input-group">
+                        <span class="input-group-addon"></span>
+                        <input name="fastingbs" placeholder="FastingBS" class="form-control" type="text">
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4 inputGroupContainer">
+                      <div class="input-group">
+                        <span class="input-group-addon"></span>
+                        <select name="restingecg" class="form-control">
+                          <option value="Normal">Normal</option>
+                          <option value="ST">ST</option>
+                          <option value="LVH">LVH</option>
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4 inputGroupContainer">
+                      <div class="input-group">
+                        <span class="input-group-addon"></span>
+                        <input name="maxhr" placeholder="Max HR" class="form-control" type="text">
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4 inputGroupContainer">
+                      <div class="input-group">
+                        <span class="input-group-addon"></span>
+                        <select name="exercise" class="form-control">
+                          <option value="N">No</option>
+                          <option value="Y">Yes</option>
+                        </select>
+
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4 inputGroupContainer">
+                      <div class="input-group">
+                        <span class="input-group-addon"></span>
+                        <input name="oldpeak" placeholder="Old Peak" class="form-control" type="text">
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4 inputGroupContainer">
+                      <div class="input-group">
+                        <span class="input-group-addon"></span>
+                        <select name="stslope" class="form-control">
+                          <option value="up">Up</option>
+                          <option value="flat">Flat</option>
+                          <option value="down">Down</option>
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Button -->
+                  <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4">
+                      <button type="submit" class="btn btn-warning">Predict <span
+                          class="glyphicon glyphicon-send"></span></button>
+                    </div>
+                  </div>
+
+
+                  <div class="res">
+
+                    <h3 style="color: rgb(12, 10, 39);">{{prediction}}</h3>
+                  </div>
+                </fieldset>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -64,7 +229,6 @@
               The term “heart disease” refers to several types of heart conditions. In the United
               States, the most common type of heart disease is coronary artery disease (CAD),
               which can lead to heart attack.</p>
-
           </div>
         </div>
         <div class="col-md-9 col-sm-8 col-xs-12">
@@ -82,8 +246,6 @@
                   <li>6. Changes in your heart rhythm</li>
                   <li>7. Swelling in your legs or abdomen</li>
                 </ul>
-
-
               </div>
             </div>
             <div class="more-features-box-text">
@@ -97,29 +259,27 @@
                   <li>3. Maintain your blood sugar level</li>
                   <li>4. Keeps your body physically active</li>
                 </ul>
-
-
               </div>
             </div>
             <div class="more-features-box-text">
               <div class="more-features-box-text-icon"> <i class="fa fa-angle-right" aria-hidden="true"></i> </div>
               <div class="more-features-box-text-description">
                 <h3>Treatment</h3>
-                <p>Diabetes mellitus, commonly known as just diabetes, is a group of metabolic disorders characterized
-                  by a high blood sugar level over a prolonged period of time.
-                </p>
 
+                <ul>
+                  <li>1. CPR. Cardiopulmonary resuscitation </li>
+                  <li>2. Angioplasty and Stents </li>
+                  <li>3. Heart Bypass Surgery</li>
+                  <li>4. Valve Disease Treatment</li>
+                  <li>5. Cardioversion</li>
+                </ul>
               </div>
-
             </div>
-
           </div>
         </div>
       </div>
     </div>
   </section>
-
-
   <script src="{{url_for('static',filename='js/jquery.min.js')}}"></script>
   <script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
   <script src="{{url_for('static',filename='js/custom.js')}}"></script>
